news add with template is added
